# menagerie

./: .gitignore  .pylintrc  README.md
Prototype-Club-Dec-2022/: start_slideshow.sh  transactions.sql
borg_design_pattern/: README.md  app.py
compile_python/: README.md  requirements.txt
curses_prototypes/: README.md
prototype_club_curses/: README.md  setup.cfg
prototype_club_curses/src/pcc/: __init__.py
prototype_club_curses/src/pcc/demos/: counter.py
prototype_club_curses/src/pcc/demos/maze/: __init__.py  map.txt
prototype_club_curses/src/pcc/demos/screensaver/: __init__.py  physics.py
prototype_club_curses/src/pcc/demos/typist/: __init__.py  structs.py
prototypes/PyFinancials/: .gitignore  .readthedocs.yml  LICENSE  README.md  run.py  setup.py
prototypes/agentic-coding-with-kanban-md/: .gitignore  README.md  add.py
prototypes/agentic-coding-with-notion/: README.md  opencode.jsonc  package.json
prototypes/ai-centric-coding-demo/: .env.example  .gitignore  PRD.md  README.md  package.json  pnpm-lock.yaml  prisma.config.ts  progress.txt  vitest.config.ts
prototypes/asymmetric_encryption/: Cargo.toml  README.md  public.pem
prototypes/asymmetric_encryption_rust/: Cargo.toml  message.secret  message.txt  private.pem
prototypes/bard_ai_demo/: demo.py
prototypes/browser_use_quickstart/: README.md  agent.py
prototypes/caddy_auth/: .gitignore  Makefile  README.md
prototypes/chainlit_quickstart/: .gitignore  README.md  pyproject.toml  server.py  tools.py
prototypes/compile_python/: example.py
prototypes/convert_map_formats/: README.md  main.py  pyproject.toml  zapier.py
prototypes/crypto_data_decoding/: environment.yml  scratchpad.ipynb
prototypes/devops/python-semantic-versioning-cicd/: .bumpversion.cfg  README.md  setup.cfg
prototypes/dnd_dungeon_generator/: NOTE.md  README.md  main.py  pyproject.toml
prototypes/dnd_dungeon_generator/src/dnd_dungeon_generator/: __init__.py  generators.py  history.py  locations.py  seeds.py  types.py
prototypes/dndcompanion/: Dockerfile  README.md  TODO  compose.yml  next.config.ts  package.json  pnpm-lock.yaml  psql.sh
prototypes/download_notion/: README.md  run.py
prototypes/fastapi_html_server/: README.md  app.py  pyproject.toml
prototypes/games/hearts/: Makefile  setup.cfg
prototypes/games/hearts/src/hearts/: cards.py  cli.py  deck.py  game.py  logic.py  main.py  pile.py  players.py  rules.py  state.py
prototypes/gcp_speech_to_text/: README.md  requirements.txt
prototypes/google_adk/: .gitignore  README.md  export.sh  pyproject.toml  test.sh
prototypes/goose_tutorial/: Makefile  README.md  db.sqlite3
prototypes/inline_todo_tasks/: PUZZLES  PUZZLES.json  PUZZLES.todo  README.md  TODO  requirements.txt  setup.cfg
prototypes/inline_todo_tasks/example/: A.py
prototypes/inline_todo_tasks/example/B/: A.py
prototypes/inline_todo_tasks/src/puzzles/: __init__.py  algorithms.py  cli.py  formatter.py  main.py  puzzles.py  structs.py
prototypes/inline_todo_tasks/tests/: test_example_dir.py  test_puzzle_finder.py
prototypes/kanban-md-playaround/: .gitignore  README.md
prototypes/landing_page/: package.json  pnpm-lock.yaml  tailwind.config.ts
prototypes/langchain/: .gitignore  README.md  chatgpt_test.sh  requirements.txt
prototypes/langchain_qa_neo4j/: .gitignore  README.md  main.py  pyproject.toml  start_database.sh
prototypes/llm_relationship_extraction/: README.md  demo.py  extract.py  pyproject.toml
prototypes/mail-to-api/: .env.example  README.md  main.py  pyproject.toml
prototypes/markdown-table/: example.py
prototypes/mcp_server/: README.md  server.py
prototypes/multi-agent-development/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
prototypes/networking/: .gitignore  README.md
prototypes/notion/: README.md
prototypes/pixijs/: README.md  new.sh
prototypes/postgres_fts/: README.md  compose.yml  (+1 more)
prototypes/presentations/script_to_system/script/v3/: setup.cfg
prototypes/presentations/script_to_system/script/v3/src/eureka/: contexts.py  main.py  processing.py
prototypes/presentations/script_to_system/script/v3/tests/: test_processing.py
prototypes/presentations/script_to_system/script/v4/: requirements.txt  setup.cfg
prototypes/presentations/script_to_system/script/v4/src/eureka4/: contexts.py  enums.py  exceptions.py  main.py  notifications.py  requests.py  server.py  statistics.py
prototypes/presentations/script_to_system/script/v4/tests/: test_processing.py
prototypes/web/postboard/backend/: Cargo.toml  Makefile
prototypes/web/postboard/backend/src/: db.rs  main.rs  routes.rs  structs.rs
prototypes/web/postboard/backend/src/structs/: post.rs  serde.rs  submission.rs
prototypes/web/roll_your_own_auth/: README.md  setup.cfg
prototypes/web/roll_your_own_auth/src/my_auth/: depends.py
(+747 files in other folders)
