[metadata]
name = pcc
version = attr: pcc.__version__
author = Kale Miller
author_email = kale.miller@prometheusai.com.au
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    pcc = pcc.cli:cli

[options.packages.find]
where = src/