[project]
name = "dnd-dungeon-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kale Miller", email = "kale.miller@prometheusai.com.au" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dnd-dungeon-generator = "dnd_dungeon_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
