[metadata]
name = puzzles
version = attr: puzzles.__version__
description = Extracts all the puzzles from a supplied path.
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    puzzles = puzzles.cli:cli

[options.extras_require]
dev = file: dev-requirements.txt

[options.packages.find]
where = src/