[project]
name = "langchain-qa-neo4j"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "numpy>=2.2.6",
    "python-dotenv>=1.1.0",
]
