[metadata]
name = demo
version = attr: demo.__version__
author = Kale Miller
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.extras_require]
dev = bump2version

[options.packages.find]
where = src/