[metadata]
name = hearts
version = attr: hearts.__version__
description = Python implementation of the card game Hearts
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    hearts = hearts.cli:cli

[options.extras_require]
dev = file: dev-requirements.txt

[options.packages.find]
where = src/