[metadata]
name = my_auth
author = Kale Miller
author_email = kale.miller@prometheusai.com.au
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.extras_require]
dev = file: requirements-dev.txt

[options.packages.find]
where = src/