[package]
name = "postboard-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
postboard-structs = {path = "../structs"}
rocket = { version = "0.5.0", features = ["serde_json", "json"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = "1.0.195"
