[metadata]
name = eureka4
version = 0.0.0

author = Kale Miller
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    eureka4 = eureka4.main:start_main_server

[options.packages.find]
where = src/